# bevy-city

./: .gitignore  Cargo.toml  LEGALITY.md  README.md
.github/workflows/: ci.yaml
crates/bevy-city/: Cargo.toml
crates/bevy-city/src/: main.rs
crates/bevy-city/src/assets/: common.rs  dat.rs  ide.rs  ipl.rs  mod.rs  shared.rs
crates/bevy-city/src/maps/: ipl_parser.rs  mod.rs
crates/bevy_renderware/: Cargo.toml  LICENSE  README.md
crates/bevy_renderware/src/: dff.rs  lib.rs  txd.rs
crates/renderware-format/: Cargo.toml
crates/renderware-format-converter/: Cargo.toml
crates/renderware-format-converter/src/: main.rs
crates/renderware-format-dumper/: Cargo.toml
crates/renderware-format-dumper/src/: main.rs
crates/renderware-format/src/: dff.rs  lib.rs  packer.rs  txd.rs
crates/renderware-format/src/raw/: binary_stream_file.rs  clump_data.rs  color.rs  constants.rs  error.rs  frame.rs  geometry_data.rs  lighting.rs  math.rs  mod.rs  morph_target.rs  section.rs  sphere.rs  triangle.rs  unparsed_data.rs
crates/vice-city-formats/: Cargo.toml
crates/vice-city-formats/src/: dat.rs  ide.rs  ipl.rs  lib.rs
game/: Cargo.toml
game/src/: main.rs
game/src/assets/: dat.rs  dff.rs  ide.rs  io.rs  ipl.rs  mod.rs  txd.rs
game/src/render/: gta_common.wgsl  gta_fragment.wgsl  gta_material.rs  gta_vertex.wgsl  mod.rs
tools/mesh-repacker-test/: Cargo.toml
tools/mesh-repacker-test/src/: main.rs
tools/renderware-format-converter/: Cargo.toml
tools/renderware-format-dumper/: Cargo.toml
