[package]
edition = "2021"
name = "bevy-city"
version = "0.1.0"

[dependencies]
anyhow = "1.0.57"
bevy = "0.7"
bevy_atmosphere = "0.3.0"
bevy_editor_pls = {git = "https://github.com/jakobhellermann/bevy_editor_pls.git", version = "0.1.0"}
bevy_flycam = "0.7.0"
bitflags = "1.3.2"
clap = {version = "3.1.18", features = ["derive"]}

renderware-format = {path = "../crates/renderware-format"}
vice-city-formats = {path = "../crates/vice-city-formats"}
