[package]
name = "bevy_renderware"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_app = "0.7"
bevy_asset = "0.7"
bevy_reflect = "0.7"
bevy_render = "0.7"
bevy_utils = "0.7"

anyhow = "1.0"
thiserror = "1.0"

renderware-format = { path = "../renderware-format" }